Fix bug where login cannot be pressed because it's covered by maintenance mode

--- a/assets/styles/map.css
+++ b/assets/styles/map.css
@@ -41,7 +41,6 @@ body[data-writable=false]::before {
 	letter-spacing: 1px;
 	position: fixed;
 	top: 0;
-	right: 0;
 	left: 100px;
 	z-index: 2;
 }
